...
        <variable
            name="photo"
            type="com.karglobal.bengallery.model.PhotoModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/grid_photo_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_photo_margin"
        android:transitionName="@string/photo_transition"
        app:cardCornerRadius="@dimen/grid_photo_corner"
        app:cardElevation="@dimen/grid_photo_elevation">
...
