...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_grid_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/grid_photo_margin"
            android:layout_marginTop="@dimen/grid_photo_margin"
            android:layout_marginEnd="@dimen/grid_photo_margin"
            android:layout_marginBottom="@dimen/grid_photo_margin"
...
